--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
+     <script src="https://apis.google.com/js/api.js" type="text/javascript"></script>
     <title>React App</title>
   </head>
   <body>
